@@ -128,6 +128,11 @@ bool lightfx_is_available()
     return _lightfxAvailable && gConfigGeneral.enable_light_fx != 0;
 }
 
+bool lightfx_for_vehicles_is_available()
+{
+    return lightfx_is_available() && gConfigGeneral.enable_light_fx_for_vehicles != 0;
+}
+
 void lightfx_init()
 {
     _LightListBack = _LightListA;
@@ -685,165 +690,136 @@ uint32_t lightfx_get_light_polution()
     return _lightPolution_front;
 }
 
-void lightfx_add_lights_magic_vehicles()
+void lightfx_add_lights_magic_vehicle(const Vehicle* vehicle)
 {
-    uint16_t spriteIndex = gSpriteListHead[SPRITE_LIST_VEHICLE_HEAD];
-    while (spriteIndex != SPRITE_INDEX_NULL)
+    uint16_t vehicleID = vehicle->sprite_index;
+
+    int16_t place_x, place_y, place_z;
+
+    place_x = vehicle->x;
+    place_y = vehicle->y;
+    place_z = vehicle->z;
+
+    static constexpr const int16_t offsetLookup[] = {
+        10, 10, 9, 8, 7, 6, 4, 2, 0, -2, -4, -6, -7, -8, -9, -10, -10, -10, -9, -8, -7, -6, -4, -2, 0, 2, 4, 6, 7, 8, 9, 10,
+    };
+
+    auto ride = get_ride(vehicle->ride);
+
+    switch (ride->type)
     {
-        Vehicle* vehicle = &(get_sprite(spriteIndex)->vehicle);
-        uint16_t vehicleID = spriteIndex;
-        spriteIndex = vehicle->next;
-
-        Vehicle* mother_vehicle = vehicle;
-
-        if (mother_vehicle->ride_subtype == RIDE_ENTRY_INDEX_NULL)
-        {
-            continue;
-        }
-
-        for (uint16_t q = vehicleID; q != SPRITE_INDEX_NULL;)
-        {
-            vehicle = GET_VEHICLE(q);
-
-            vehicleID = q;
-            if (vehicle->next_vehicle_on_train == q)
-                break;
-            q = vehicle->next_vehicle_on_train;
-
-            int16_t place_x, place_y, place_z;
-
-            place_x = vehicle->x;
-            place_y = vehicle->y;
-            place_z = vehicle->z;
-
-            static constexpr const int16_t offsetLookup[] = {
-                10,  10,  9,  8,  7,  6,  4,  2,  0, -2, -4, -6, -7, -8, -9, -10,
-                -10, -10, -9, -8, -7, -6, -4, -2, 0, 2,  4,  6,  7,  8,  9,  10,
-            };
-
-            auto ride = get_ride(vehicle->ride);
-            if (ride == nullptr)
-                continue;
-
-            switch (ride->type)
+        case RIDE_TYPE_OBSERVATION_TOWER:
+            lightfx_add_3d_light(
+                vehicleID, 0x0000 | LIGHTFX_LIGHT_QUALIFIER_SPRITE, vehicle->x, vehicle->y + 16, vehicle->z,
+                LIGHTFX_LIGHT_TYPE_SPOT_3);
+            lightfx_add_3d_light(
+                vehicleID, 0x0100 | LIGHTFX_LIGHT_QUALIFIER_SPRITE, vehicle->x + 16, vehicle->y, vehicle->z,
+                LIGHTFX_LIGHT_TYPE_SPOT_3);
+            lightfx_add_3d_light(
+                vehicleID, 0x0200 | LIGHTFX_LIGHT_QUALIFIER_SPRITE, vehicle->x - 16, vehicle->y, vehicle->z,
+                LIGHTFX_LIGHT_TYPE_SPOT_3);
+            lightfx_add_3d_light(
+                vehicleID, 0x0300 | LIGHTFX_LIGHT_QUALIFIER_SPRITE, vehicle->x, vehicle->y - 16, vehicle->z,
+                LIGHTFX_LIGHT_TYPE_SPOT_3);
+            break;
+        case RIDE_TYPE_MINE_TRAIN_COASTER:
+        case RIDE_TYPE_GHOST_TRAIN:
+            if (vehicle == vehicle_get_head(vehicle))
             {
-                case RIDE_TYPE_OBSERVATION_TOWER:
-                    lightfx_add_3d_light(
-                        vehicleID, 0x0000 | LIGHTFX_LIGHT_QUALIFIER_SPRITE, vehicle->x, vehicle->y + 16, vehicle->z,
-                        LIGHTFX_LIGHT_TYPE_SPOT_3);
-                    lightfx_add_3d_light(
-                        vehicleID, 0x0100 | LIGHTFX_LIGHT_QUALIFIER_SPRITE, vehicle->x + 16, vehicle->y, vehicle->z,
-                        LIGHTFX_LIGHT_TYPE_SPOT_3);
-                    lightfx_add_3d_light(
-                        vehicleID, 0x0200 | LIGHTFX_LIGHT_QUALIFIER_SPRITE, vehicle->x - 16, vehicle->y, vehicle->z,
-                        LIGHTFX_LIGHT_TYPE_SPOT_3);
-                    lightfx_add_3d_light(
-                        vehicleID, 0x0300 | LIGHTFX_LIGHT_QUALIFIER_SPRITE, vehicle->x, vehicle->y - 16, vehicle->z,
-                        LIGHTFX_LIGHT_TYPE_SPOT_3);
-                    break;
-                case RIDE_TYPE_MINE_TRAIN_COASTER:
-                case RIDE_TYPE_GHOST_TRAIN:
-                    if (vehicle == vehicle_get_head(vehicle))
-                    {
-                        place_x -= offsetLookup[(vehicle->sprite_direction + 0) % 32] * 2;
-                        place_y -= offsetLookup[(vehicle->sprite_direction + 8) % 32] * 2;
-                        lightfx_add_3d_light(
-                            vehicleID, 0x0000 | LIGHTFX_LIGHT_QUALIFIER_SPRITE, place_x, place_y, place_z,
-                            LIGHTFX_LIGHT_TYPE_SPOT_3);
-                    }
-                    break;
-                case RIDE_TYPE_CHAIRLIFT:
-                    lightfx_add_3d_light(
-                        vehicleID, 0x0000 | LIGHTFX_LIGHT_QUALIFIER_SPRITE, place_x, place_y, place_z - 16,
-                        LIGHTFX_LIGHT_TYPE_LANTERN_2);
-                    break;
-                case RIDE_TYPE_BOAT_HIRE:
-                case RIDE_TYPE_CAR_RIDE:
-                case RIDE_TYPE_GO_KARTS:
-                case RIDE_TYPE_DODGEMS:
-                case RIDE_TYPE_MINI_HELICOPTERS:
-                case RIDE_TYPE_MONORAIL_CYCLES:
-                case RIDE_TYPE_SUBMARINE_RIDE:
-                case RIDE_TYPE_SPLASH_BOATS:
-                case RIDE_TYPE_WATER_COASTER:
-                {
-                    Vehicle* vehicle_draw = vehicle_get_head(vehicle);
-                    if (vehicle_draw->next_vehicle_on_train != SPRITE_INDEX_NULL)
-                    {
-                        vehicle_draw = GET_VEHICLE(vehicle_draw->next_vehicle_on_train);
-                    }
-                    place_x = vehicle_draw->x;
-                    place_y = vehicle_draw->y;
-                    place_z = vehicle_draw->z;
-                    place_x -= offsetLookup[(vehicle_draw->sprite_direction + 0) % 32];
-                    place_y -= offsetLookup[(vehicle_draw->sprite_direction + 8) % 32];
-                    lightfx_add_3d_light(
-                        vehicleID, 0x0000 | LIGHTFX_LIGHT_QUALIFIER_SPRITE, place_x, place_y, place_z,
-                        LIGHTFX_LIGHT_TYPE_SPOT_2);
-                    place_x -= offsetLookup[(vehicle_draw->sprite_direction + 0) % 32];
-                    place_y -= offsetLookup[(vehicle_draw->sprite_direction + 8) % 32];
-                    lightfx_add_3d_light(
-                        vehicleID, 0x0100 | LIGHTFX_LIGHT_QUALIFIER_SPRITE, place_x, place_y, place_z,
-                        LIGHTFX_LIGHT_TYPE_SPOT_2);
-                    break;
-                }
-                case RIDE_TYPE_MONORAIL:
-                    lightfx_add_3d_light(
-                        vehicleID, 0x0000 | LIGHTFX_LIGHT_QUALIFIER_SPRITE, vehicle->x, vehicle->y, vehicle->z + 12,
-                        LIGHTFX_LIGHT_TYPE_SPOT_2);
-                    if (vehicle == vehicle_get_head(vehicle))
-                    {
-                        place_x -= offsetLookup[(vehicle->sprite_direction + 0) % 32] * 2;
-                        place_y -= offsetLookup[(vehicle->sprite_direction + 8) % 32] * 2;
-                        lightfx_add_3d_light(
-                            vehicleID, 0x0100 | LIGHTFX_LIGHT_QUALIFIER_SPRITE, place_x, place_y, place_z + 10,
-                            LIGHTFX_LIGHT_TYPE_LANTERN_3);
-                        place_x -= offsetLookup[(vehicle->sprite_direction + 0) % 32] * 3;
-                        place_y -= offsetLookup[(vehicle->sprite_direction + 8) % 32] * 3;
-                        lightfx_add_3d_light(
-                            vehicleID, 0x0200 | LIGHTFX_LIGHT_QUALIFIER_SPRITE, place_x, place_y, place_z + 2,
-                            LIGHTFX_LIGHT_TYPE_LANTERN_3);
-                    }
-                    if (vehicle == vehicle_get_tail(vehicle))
-                    {
-                        place_x += offsetLookup[(vehicle->sprite_direction + 0) % 32] * 2;
-                        place_y += offsetLookup[(vehicle->sprite_direction + 8) % 32] * 2;
-                        lightfx_add_3d_light(
-                            vehicleID, 0x0300 | LIGHTFX_LIGHT_QUALIFIER_SPRITE, place_x, place_y, place_z + 10,
-                            LIGHTFX_LIGHT_TYPE_LANTERN_3);
-                        place_x += offsetLookup[(vehicle->sprite_direction + 0) % 32] * 2;
-                        place_y += offsetLookup[(vehicle->sprite_direction + 8) % 32] * 2;
-                        lightfx_add_3d_light(
-                            vehicleID, 0x0400 | LIGHTFX_LIGHT_QUALIFIER_SPRITE, place_x, place_y, place_z + 2,
-                            LIGHTFX_LIGHT_TYPE_LANTERN_3);
-                    }
-                    break;
-                case RIDE_TYPE_MINIATURE_RAILWAY:
-                    if (vehicle == vehicle_get_head(vehicle))
-                    {
-                        place_x -= offsetLookup[(vehicle->sprite_direction + 0) % 32] * 2;
-                        place_y -= offsetLookup[(vehicle->sprite_direction + 8) % 32] * 2;
-                        lightfx_add_3d_light(
-                            vehicleID, 0x0100 | LIGHTFX_LIGHT_QUALIFIER_SPRITE, place_x, place_y, place_z + 10,
-                            LIGHTFX_LIGHT_TYPE_LANTERN_3);
-                        place_x -= offsetLookup[(vehicle->sprite_direction + 0) % 32] * 2;
-                        place_y -= offsetLookup[(vehicle->sprite_direction + 8) % 32] * 2;
-                        lightfx_add_3d_light(
-                            vehicleID, 0x0200 | LIGHTFX_LIGHT_QUALIFIER_SPRITE, place_x, place_y, place_z + 2,
-                            LIGHTFX_LIGHT_TYPE_LANTERN_3);
-                    }
-                    else
-                    {
-                        lightfx_add_3d_light(
-                            vehicleID, 0x0000 | LIGHTFX_LIGHT_QUALIFIER_SPRITE, place_x, place_y, place_z + 10,
-                            LIGHTFX_LIGHT_TYPE_LANTERN_3);
-                    }
-                    break;
-                default:
-                    break;
-            };
+                place_x -= offsetLookup[(vehicle->sprite_direction + 0) % 32] * 2;
+                place_y -= offsetLookup[(vehicle->sprite_direction + 8) % 32] * 2;
+                lightfx_add_3d_light(
+                    vehicleID, 0x0000 | LIGHTFX_LIGHT_QUALIFIER_SPRITE, place_x, place_y, place_z, LIGHTFX_LIGHT_TYPE_SPOT_3);
+            }
+            break;
+        case RIDE_TYPE_CHAIRLIFT:
+            lightfx_add_3d_light(
+                vehicleID, 0x0000 | LIGHTFX_LIGHT_QUALIFIER_SPRITE, place_x, place_y, place_z - 16,
+                LIGHTFX_LIGHT_TYPE_LANTERN_2);
+            break;
+        case RIDE_TYPE_BOAT_HIRE:
+        case RIDE_TYPE_CAR_RIDE:
+        case RIDE_TYPE_GO_KARTS:
+        case RIDE_TYPE_DODGEMS:
+        case RIDE_TYPE_MINI_HELICOPTERS:
+        case RIDE_TYPE_MONORAIL_CYCLES:
+        case RIDE_TYPE_SUBMARINE_RIDE:
+        case RIDE_TYPE_SPLASH_BOATS:
+        case RIDE_TYPE_WATER_COASTER:
+        {
+            Vehicle* vehicle_draw = vehicle_get_head(vehicle);
+            if (vehicle_draw->next_vehicle_on_train != SPRITE_INDEX_NULL)
+            {
+                vehicle_draw = GET_VEHICLE(vehicle_draw->next_vehicle_on_train);
+            }
+            place_x = vehicle_draw->x;
+            place_y = vehicle_draw->y;
+            place_z = vehicle_draw->z;
+            place_x -= offsetLookup[(vehicle_draw->sprite_direction + 0) % 32];
+            place_y -= offsetLookup[(vehicle_draw->sprite_direction + 8) % 32];
+            lightfx_add_3d_light(
+                vehicleID, 0x0000 | LIGHTFX_LIGHT_QUALIFIER_SPRITE, place_x, place_y, place_z, LIGHTFX_LIGHT_TYPE_SPOT_2);
+            place_x -= offsetLookup[(vehicle_draw->sprite_direction + 0) % 32];
+            place_y -= offsetLookup[(vehicle_draw->sprite_direction + 8) % 32];
+            lightfx_add_3d_light(
+                vehicleID, 0x0100 | LIGHTFX_LIGHT_QUALIFIER_SPRITE, place_x, place_y, place_z, LIGHTFX_LIGHT_TYPE_SPOT_2);
+            break;
         }
-    }
+        case RIDE_TYPE_MONORAIL:
+            lightfx_add_3d_light(
+                vehicleID, 0x0000 | LIGHTFX_LIGHT_QUALIFIER_SPRITE, vehicle->x, vehicle->y, vehicle->z + 12,
+                LIGHTFX_LIGHT_TYPE_SPOT_2);
+            if (vehicle == vehicle_get_head(vehicle))
+            {
+                place_x -= offsetLookup[(vehicle->sprite_direction + 0) % 32] * 2;
+                place_y -= offsetLookup[(vehicle->sprite_direction + 8) % 32] * 2;
+                lightfx_add_3d_light(
+                    vehicleID, 0x0100 | LIGHTFX_LIGHT_QUALIFIER_SPRITE, place_x, place_y, place_z + 10,
+                    LIGHTFX_LIGHT_TYPE_LANTERN_3);
+                place_x -= offsetLookup[(vehicle->sprite_direction + 0) % 32] * 3;
+                place_y -= offsetLookup[(vehicle->sprite_direction + 8) % 32] * 3;
+                lightfx_add_3d_light(
+                    vehicleID, 0x0200 | LIGHTFX_LIGHT_QUALIFIER_SPRITE, place_x, place_y, place_z + 2,
+                    LIGHTFX_LIGHT_TYPE_LANTERN_3);
+            }
+            if (vehicle == vehicle_get_tail(vehicle))
+            {
+                place_x += offsetLookup[(vehicle->sprite_direction + 0) % 32] * 2;
+                place_y += offsetLookup[(vehicle->sprite_direction + 8) % 32] * 2;
+                lightfx_add_3d_light(
+                    vehicleID, 0x0300 | LIGHTFX_LIGHT_QUALIFIER_SPRITE, place_x, place_y, place_z + 10,
+                    LIGHTFX_LIGHT_TYPE_LANTERN_3);
+                place_x += offsetLookup[(vehicle->sprite_direction + 0) % 32] * 2;
+                place_y += offsetLookup[(vehicle->sprite_direction + 8) % 32] * 2;
+                lightfx_add_3d_light(
+                    vehicleID, 0x0400 | LIGHTFX_LIGHT_QUALIFIER_SPRITE, place_x, place_y, place_z + 2,
+                    LIGHTFX_LIGHT_TYPE_LANTERN_3);
+            }
+            break;
+        case RIDE_TYPE_MINIATURE_RAILWAY:
+            if (vehicle == vehicle_get_head(vehicle))
+            {
+                place_x -= offsetLookup[(vehicle->sprite_direction + 0) % 32] * 2;
+                place_y -= offsetLookup[(vehicle->sprite_direction + 8) % 32] * 2;
+                lightfx_add_3d_light(
+                    vehicleID, 0x0100 | LIGHTFX_LIGHT_QUALIFIER_SPRITE, place_x, place_y, place_z + 10,
+                    LIGHTFX_LIGHT_TYPE_LANTERN_3);
+                place_x -= offsetLookup[(vehicle->sprite_direction + 0) % 32] * 2;
+                place_y -= offsetLookup[(vehicle->sprite_direction + 8) % 32] * 2;
+                lightfx_add_3d_light(
+                    vehicleID, 0x0200 | LIGHTFX_LIGHT_QUALIFIER_SPRITE, place_x, place_y, place_z + 2,
+                    LIGHTFX_LIGHT_TYPE_LANTERN_3);
+            }
+            else
+            {
+                lightfx_add_3d_light(
+                    vehicleID, 0x0000 | LIGHTFX_LIGHT_QUALIFIER_SPRITE, place_x, place_y, place_z + 10,
+                    LIGHTFX_LIGHT_TYPE_LANTERN_3);
+            }
+            break;
+        default:
+            break;
+    };
 }
 
 void lightfx_apply_palette_filter(uint8_t i, uint8_t* r, uint8_t* g, uint8_t* b)
