@@ -15,6 +15,7 @@
 #    include "../common.h"
 
 struct CoordsXY;
+struct Vehicle;
 struct rct_drawpixelinfo;
 struct rct_palette;
 
@@ -44,6 +45,7 @@ enum LIGHTFX_LIGHT_QUALIFIER
 
 void lightfx_set_available(bool available);
 bool lightfx_is_available();
+bool lightfx_for_vehicles_is_available();
 
 void lightfx_init();
 
@@ -62,7 +64,7 @@ void lightfx_add_3d_light(uint32_t lightID, uint16_t lightIDqualifier, int16_t x
 void lightfx_add_3d_light_magic_from_drawing_tile(
     const CoordsXY& mapPosition, int16_t offsetX, int16_t offsetY, int16_t offsetZ, uint8_t lightType);
 
-void lightfx_add_lights_magic_vehicles();
+void lightfx_add_lights_magic_vehicle(const Vehicle* vehicle);
 
 uint32_t lightfx_get_light_polution();
 
